# Thesis2026

./: .gitignore  Exploratory Data Analysis.ipynb  GenAi.txt  README.md  amsterdam_domein_regels.json  experts_as_judge copy.ipynb  final_thesis.ipynb  interview.ipynb  main.py  master_evaluatie_matrix.csv  model_v.ipynb  model_wrv.ipynb  promt_engineering.csv  pyproject.toml  rules_per_domain.json  thesis.ipynb  visualisation.ipynb
Data/: Vakantieverhuur adviesen Merlijne.xlsx  ~$Vakantieverhuur adviesen Merlijne.xlsx
summary/: samenvatting_scores_scriptie_1.csv  samenvatting_scores_scriptie_10.csv  samenvatting_scores_scriptie_11.csv  samenvatting_scores_scriptie_2.csv  samenvatting_scores_scriptie_3.csv  samenvatting_scores_scriptie_4.csv  samenvatting_scores_scriptie_5.csv  samenvatting_scores_scriptie_6.csv  samenvatting_scores_scriptie_7.csv  samenvatting_scores_scriptie_8.csv  samenvatting_scores_scriptie_9.csv  summary_scores_thesis_1.csv  summary_scores_thesis_1.xlsx  summary_scores_thesis_10.xlsx  summary_scores_thesis_11.csv  summary_scores_thesis_11.xlsx  summary_scores_thesis_12.csv  summary_scores_thesis_12.xlsx  summary_scores_thesis_13.csv  summary_scores_thesis_13.xlsx  summary_scores_thesis_14.csv  summary_scores_thesis_14.xlsx  summary_scores_thesis_15.xlsx  summary_scores_thesis_16.csv  summary_scores_thesis_16.xlsx  summary_scores_thesis_2.csv  summary_scores_thesis_2.xlsx  summary_scores_thesis_3.csv  summary_scores_thesis_3.xlsx  summary_scores_thesis_4.csv  summary_scores_thesis_4.xlsx  summary_scores_thesis_5.csv  summary_scores_thesis_5.xlsx  (+9 more)
(+18 files in other folders)
