[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "azure-identity>=1.25.3",
    "dotenv>=0.9.9",
    "langchain>=1.2.14",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.15",
    "nltk>=3.9.4",
    "openai>=2.30.0",
    "openpyxl>=3.1.5",
    "torch",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "pillow>=12.2.0",
    "pandas>=3.0.3",
    "numpy>=2.4.6",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.9",
    "langchain-text-splitters>=1.1.2",
    "anthropic>=0.107.1",
]
